log/22012/2024_early/log_PMTfy_22012_21_49041425_22112024_214527.err
  File "/lustre/hpc/icecube/cyan/factory/DOMification/PMTfy_by_part.py", line 48
    source_table=source_table_name,
    ^
SyntaxError: invalid syntax
